--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
           </div>
           <div class="name-logo" id="name-logo">
-            <img src="/images/logo.png" alt="" />
+            <img src="images\logo.png" alt="" />
           </div>
         </div>
         <div class="about-section">
